[project]
name = "CQOS"
version = "0.1.0"
description = "Continous Query Optimization for SPARQL"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.3",
    "networkx>=2.5.1",
    "pyrdf2vec>=0.2.3",
    "torch==1.13.1",
    "torch-geometric>=2.6.1",
]
