[project]
name = "query-optimization"
version = "0.1.0"
description = "Query optimization using learned cost models"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.5.0",
    "torch-geometric>=2.6.0",
    "numpy>=2.0.0,<3.0.0",
    "scipy>=1.14.0",
    "torch-optimizer>=0.3.0",
    "nevergrad>=1.0.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "urllib3>=2.0.0",
    "matplotlib>=3.9.0",
    "graphviz>=0.20.0",
    "networkx>=3.4.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "pytorch-optimizer>=3.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]
plotting = [
    "scienceplots>=2.1.0",
]



[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["v3*"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.uv.sources]
torch = { index = "pytorch-cpu" }
